[package]
name = "blossom"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = "1.0.94"
base16ct = { version = "0.2.0", features = ["std"] }
blake3 = "1.5.5"
bzip2 = "0.4.4"
camino = { version = "1.1.9", features = ["serde1"] }
clap = { version = "4.5.23", features = [
    "cargo",
    "derive",
    "env",
    "unicode",
    "wrap_help",
] }
flate2 = "1.0.35"
indicatif = "0.17.9"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["deflate", "gzip", "zstd"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_with = "3.11.0"
sha2 = "0.10.8"
spdx = "0.10.7"
tar = "0.4.43"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
toml_edit = { version = "0.22.22", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.4", features = ["serde"] }
xz2 = "0.1.7"
zstd = "0.13.2"
