[package]
name = "blossom"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = "1.0.99"
base16ct = { version = "0.3.0", features = ["alloc"] }
blake3 = "1.8.2"
bzip2 = "0.6.0"
camino = { version = "1.1.12", features = ["serde1"] }
clap = { version = "4.5.47", features = [
    "cargo",
    "derive",
    "env",
    "unicode",
    "wrap_help",
] }
flate2 = "1.1.2"
indicatif = "0.18.0"
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["deflate", "gzip", "zstd"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.14.0"
sha2 = "0.10.9"
spdx = "0.12.0"
tar = "0.4.44"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
toml_edit = { version = "0.23.4", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = { version = "2.5.7", features = ["serde"] }
xz2 = "0.1.7"
zstd = "0.13.3"
